--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -7,7 +7,6 @@
         <title>Title Page</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <link rel="stylesheet" href="./custom-bulma.css">
-        <html style = 'overflow-y:hidden'></html>
     </head>
     <body>
         <nav class="navbar is-primary">
@@ -19,14 +18,39 @@
             </div>
         </nav>
 
-        <section class="container has-text-centered">
+        <section id="searchpage" class="container has-text-centered">
             <h2 class="is-size-1-desktop is-size-3-tablet is-size-4-mobile is-family-primary m-6 p-6">Where will the walk begin?</h2>
             <div class="field">
                 <input id="staddrinput" class="input is-primary mx-6" style="max-width: 80%"type="text" placeholder="Street Address">
             </div>
             <button onclick="getlonlat()"id="submitmain" class="button is-primary">GO</button>
         </section>
+
+        <section id="resultspage" class="container has-text-centered has-background-warning">
+            <div class="has-text-centered">
+                <h2 class="is-size-1-desktop is-size-3-tablet is-size-4-mobile is-family-primary m-6 p-6">Results</h2>
+            </div>
+            <section id="resultscards" style="width: 80%" class="container has-text-centered has-background-danger mx-6">
+
+                    <section style="width: 90%" class="card my-2 px-2">
+                        <h2>shopname</h2>
+                        <p>address</p>
+                    </section>
+
+                    <section style="width: 90%" class="card my-2 px-2">
+                        <h2>shopname</h2>
+                        <p>address</p>
+                    </section>
+
+
+            </section>
+
+        </section>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="./testerrr.js"></script>
+
+
     </body>
 
 </html>
