--- a/mapapihtml.html
+++ b/mapapihtml.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <form onsubmit="enter();return false" id="address">
-    <input type="text" placeholder="enter your starting point" id="userAddressInput">
+    <input type="text" placeholder="enter your starting address" id="userAddressInput">
     <!-- <input type="button" id="submitAddressBtn" value="submit"> -->
     </form>
-    <script src="./assets/mapapijs.js"></script>
+    <script src="./mapapiassets/mapapijs.js"></script>
 </body>
 </html>
