--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -21,9 +21,9 @@
         <section id="searchpage" class="container has-text-centered">
             <h2 class="is-size-1-desktop is-size-3-tablet is-size-4-mobile is-family-primary m-6 p-6">Where will the walk begin?</h2>
             <div class="field">
-                <input id="staddrinput" class="input is-primary mx-6" style="max-width: 80%"type="text" placeholder="Street Address">
+                <input onsubmit="enter()" id="staddrinput" class="input is-primary mx-6" style="max-width: 80%"type="text" placeholder="Street Address">
             </div>
-            <button onclick="getlonlat()"id="submitmain" class="button is-primary">GO</button>
+            <button onclick="enter()"id="submitmain" class="button is-primary">GO</button>
         </section>
 
         <section id="resultspage" class="container has-text-centered has-background-warning">
@@ -48,7 +48,8 @@
         </section>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./testerrr.js"></script>
+        <!-- <script src="./testerrr.js"></script> -->
+        <script src="../mapapiassets/mapapijs.js"></script>
 
 
     </body>
