patching html after error

--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -71,6 +71,16 @@
             </section>
         </section>
 
+        <section class="columns">
+            <section class="column card m-2">
+                <h2>weather</h2>
+            </section>
+        </section>
+
+    </section>
+
+        
+
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- <script src="./testerrr.js"></script> -->
