--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -9,6 +9,7 @@
     <title>Title Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./custom-bulma.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -82,9 +83,9 @@
         
 
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="/assets/coffeewalkscript1.js"></script>
         <!-- <script src="./testerrr.js"></script> -->
-        <script src="../mapapiassets/mapapijs.js"></script>
+        <!-- <script src="../mapapiassets/mapapijs.js"></script> -->
 
 
 </body>
