added Weather API onto the main JS and HTML

--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -75,6 +75,9 @@
         <section class="columns">
             <section class="column card m-2">
                 <h2>weather</h2>
+                <p class="card-text" id="location"></p>
+                <p class="card-text" id="temperature"></p>
+                <p class="card-text" id="description"></p>
             </section>
         </section>
 
