--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -79,6 +79,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- <script src="./testerrr.js"></script> -->
     <script src="../assets/coffeewalkscript1.js"></script>
+    <script src="../mapapiassets/mapapi3.js"></script>
 
 
 </body>
