made page functional

--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -21,6 +21,10 @@
         </div>
     </nav>
 
+
+
+
+
     <section id="searchpage" class="container has-text-centered">
         <h2 class="is-size-1-desktop is-size-3-tablet is-size-4-mobile is-family-primary m-6 p-6">Where will the walk
             begin?</h2>
@@ -32,16 +36,28 @@
     </section>
 
     <section id="resultspage" class="container has-text-centered has-background-warning">
-        <div class="has-text-centered">
-            <h2 class="is-size-1-desktop is-size-3-tablet is-size-4-mobile is-family-primary m-6 p-6">Results</h2>
+
+        <div class="columns">
+            <div class="has-text-centered column">
+                <h2 class="is-size-1-desktop is-size-3-tablet is-size-4-mobile is-family-primary m-2 p-2">Results</h2>
+            </div>
         </div>
-        <section id="resultscards" style="width: 80%" class="container has-text-centered has-background-danger mx-6">
+
+        <div class="columns">
+            <section id="resultscards" style="width: 80%"
+                class="container column has-text-centered has-background-danger mx-6">
 
 
 
-        </section>
+            </section>
+        </div>
 
     </section>
+
+
+
+
+
 
     <section id="finpage" class="container p-2 has-background-primary has-text-centered">
 
@@ -59,7 +75,7 @@
             </section>
 
             <section id="mapcard" class=" card has-background-light m-2 column">
-                
+
             </section>
         </section>
 
@@ -70,6 +86,8 @@
                 <h2 id="description"></h2>
             </section>
         </section>
+
+
 
     </section>
 
