completed map code

--- a/luis branch/bulma.html
+++ b/luis branch/bulma.html
@@ -74,7 +74,7 @@
                 <h2 id="shopaddfin"></h2>
             </section>
 
-            <section id="mapcard" class=" card has-background-light m-2 column">
+            <section id="mapcard" class="card has-background-light m-2 column">
 
             </section>
         </section>
@@ -97,7 +97,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- <script src="./testerrr.js"></script> -->
     <script src="../assets/coffeewalkscript1.js"></script>
-    <script src="../mapapiassets/mapapi3.js"></script>
+    <!-- <script src="../mapapiassets/mapapi3.js"></script> -->
 
 
 </body>
