--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title Page</title>
+    <title>CoffeeWalk</title>
     <!-- <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css"> -->
     <link rel="stylesheet" href="./sass/mystyles.css">
     <link rel="stylesheet" href="./assets/custom-bulma.css">
